@@ -17,6 +17,7 @@ AUX gitlab-unicorn.service 773 SHA256 010c9e223a30400d9155b39499eb0d7efad23b66ba
 AUX gitlab-workhorse.service 930 SHA256 09348a52fec333b4b19828752e0484400c1efa9dfb644723fcf8e80537e294b6 SHA512 6332024fe0049287899cf482b6e4439e9dd90da14e489d08aa8e5e79cb7872efcc517d99b69fa23b011b382acb1e5926496a78f08af5d2d64daa515b869a0c6a WHIRLPOOL 3749c6719b2a35c7de29763cd616e1e9cc30a85aa1630ffc46440334459b5922503d52629556c125a6dd6574bdc5f23f1b2a7f2a85e2270a415b22246e0b6bae
 AUX gitlab.conf 27 SHA256 cd9be088bbb67a5400407fc6f63c061eb224f16748b7d0812ff2c101f43ca263 SHA512 909c49fee6d050c1e94b2559ff2a9d54c5c346492be0e2920b50d56d69eaddbed67e3ac12e012d2a9601b5596640ebf33c8dc68fc588a03ca370d963294be37f WHIRLPOOL fa436e8d7d2643d450259d26b6e7b24dae69df47ed22e5ef2a567f37aa785fbf3b0eb1129ae7c8bf8986c29559fc3b744a34064375e5245dce2b10053cd715d9
 DIST gitlab-ce-10.0.0_rc3.tar.gz 39936453 SHA256 347840d9beb01f765c4962616e241924b48ec0e3c09b35ff96563d1b509d4375 SHA512 855324e0c351ff1db3bc8823f85768d6968628da1452edc68f63249467eede89ba371e3d2de94a5fca3f31462c3d13dc2a8b3cd467f0647896183ead27492c81 WHIRLPOOL b7e98abb055cb6e884505dd2d49e93031f6722c0fb7cc34470903248de6f8871456deee2e41cf4da27b42dd7b4996111ecac02d568aa44286670edfd07d5cd7a
+DIST gitlab-ce-10.0.1.tar.gz 40042674 SHA256 b3b978c0fdacb920850e04ae4f7a08ab01f9d04d7c10746020af54dedcedc2d3 SHA512 c0220d36b47dd4aa0ab5b484f7e4df0e74890c14b7b98375c4f4540d236186023a64af6d28b30280778f1bf320a80595ea6db2b8485fa9fdfdc06dba7ed363d6 WHIRLPOOL ab0d76d27eba28465e7d646803be2d110cc18dd33abb0c757dbca812bfb9eb8be28b702429657a1554a1b9b3ee94196dbc3cbacf9295c0cd5ab53ae08f493dd9
 DIST gitlab-ce-9.0.13.tar.gz 26366204 SHA256 056c98acb558776a2919b1aa501cb5303e66eb3cfe1d54b26988492be1c3816b SHA512 42fae9a01adc1eaac8e59b4ddb5f1d7c11d409dab32b84bf9849eedfed88bf87f7d36d0f9687f253424e2eacdbf83b3560bf9e64baa1533e4b1b6ff6e3be65e7 WHIRLPOOL d5c312d3f63057786ad28b2fba328d7a0593a5140aad617067b0aa0319d741f36ff32e573a436bf663f0f56d820b02fea5e22a430355856268306582fb62396a
 DIST gitlab-ce-9.1.10.tar.gz 30516975 SHA256 37cfd9dafcfbcd432d7d7a3abc6889bcd35321fc00b717f4810bf432791b0243 SHA512 81a7b9836aafcb348b6c38d8c19917053fc7a6adc6328d4b05215aa3d5c698adb708068d36bdc82df61e5b2d6b269c0ba8682b4994fa4a36b98fabe5b17e5f07 WHIRLPOOL b0affc921e0b41faabe354805fbcbd56a5839f7eeb880c00c2f10b68b0f2865b8e39ed58cfd99f6b6d0f2517bd465ff3f227fc6f17e1c1e17128299f21a911f2
 DIST gitlab-ce-9.2.10.tar.gz 30988788 SHA256 a30e9d08d08433713df958d447a76cf2ed16344c7de56614f2849e8caad3e3b5 SHA512 fd4602c86edaf3060e1f5b8c8d6c5e4d40ec64f7f3d2519008b8c096720016c9a0dc6357bc464e72e4b52b25bd12ab26a4166898fba608383b4e4647ad49782c WHIRLPOOL f6b79e71f906c461ed89bd23bd537ae640b55c6727d7275e16ecb3b7349957f1461138d8fef5163137cabae59dccfdd8c4b22bd425800bf2eee3b732fd9a2908
@@ -24,6 +25,7 @@ DIST gitlab-ce-9.3.11.tar.gz 31768655 SHA256 0eaeb3a9daf3f1ea56ad7435b2d7fe3e15e
 DIST gitlab-ce-9.4.6.tar.gz 32855962 SHA256 2bfe2595dc334438d27fc1ab1e94464f02577f36ff5f9c5e76f4247ec96a685d SHA512 4ccbd1988fc40ef8f12f4e2e2610724e9e799e6e2f31ca234dca2c1c0642a3f123f0c90590ba7b01deb761a1802be0e49a56b089067879193f5256c2c13f3909 WHIRLPOOL 2bc05cda6705de79264b323dc4b0f6cd1d49561637827a08de0b3f6ab35e8131f72ba05ddc2f7073c879236a248c469c831dd724482a33865bc80044c09ca917
 DIST gitlab-ce-9.5.4.tar.gz 36194887 SHA256 5b6e8558e228df6f645a4b7bed6b3a51f73732e4f68818331b89c81bef055d91 SHA512 b90028217f835389db9e01f8d6466a69d5fe3b164239e306c8dbd97e49574c652fd88de15c4110ebcc2b3f93cfd89758cb8ec928bd1d16caf1dcbe3984d1f0f1 WHIRLPOOL 2999f4afab19eeac42b0f4f00db685e72e457122040ae8c0e91f48dfb389f1cdc03157278bb7ad29fe2e9b88e179b22e03d7d6328e10af534244167c716981d1
 EBUILD gitlab-ce-10.0.0_rc3.ebuild 13515 SHA256 4d9c3702ecca4d10a30c7be72d76142de55f5cf028b2372676addb06fdb6853e SHA512 501c9a66b17aedd1c39479048f9360018643c356d245e37b422bb39514b8d88058dad998151edfe9ec2f9980b8f7d81acb3d9311c12a1585f9310f46f5b6e240 WHIRLPOOL 1a802e628fd521f2994365cfc046e1f93ad725e65a24c524e89f98948000bc857bfb83cd72d357744e7abe928bd7b287531663df28e183080ede6f8f9faa8826
+EBUILD gitlab-ce-10.0.1.ebuild 13533 SHA256 7d5948cf820ea47895e6f7552693cbe237998853773812ba3fbe6e1279f2ed11 SHA512 5326f4c5234cd7f99e3321e0cf4d71ec11e0b6dd8377587cda3e36b8c0704a354b9ba5918f92c80c67f72b934ec437505b029695bd75465f09461347dcff7563 WHIRLPOOL 664984a599db73b6bd90693de43bc59535533365eab4f5b56bec61c0787da6abcd657b9ced2448bb25130c1bac02f8523d581fa2733b175e9e44ad136b754f9f
 EBUILD gitlab-ce-9.0.13.ebuild 13146 SHA256 64748b6e753c67ac3c46094a5bd021b13bca05d5dbf5955de6e0796ab8bb43fc SHA512 ba2ad250ef3c35d333d22ae25dd62c05fc53591438bf2f77a6d0ccc8993e53695d8458153bb6e80dcde4b092bc7523909b2d9e3949e640862a3455deaf647b1f WHIRLPOOL 78863ffbb92f592405227209a4980c05cf40e34be35a1198bdd3cba938fa34709ca0af850b4b4735f7aeb54dd3e35b1825233dd32afa2a964524bf7cc2035839
 EBUILD gitlab-ce-9.1.10.ebuild 13302 SHA256 3fc7a2a4e386e49362a4c9abec30799e0a794b9e1636b18b57c988323acc86bc SHA512 de31e302e94df6dbf263aaf4afce12d3260dac06b22b3f48965e4e7687b3be8e831d06ce2d05581acf9c9305dc1b40842e5be0fed2dc7f7948e9836361f82e87 WHIRLPOOL a6599e4d5c77ae0c6f0a8ba71797a20e73747f1cc4d5a43d2b3939efb7dfd59b8c409b17c32ffc39e6c8cee976da77840309c6be4f51f84a3034812c6b481e99
 EBUILD gitlab-ce-9.2.10.ebuild 13047 SHA256 19f794001a59da5c2de341c2f4fa73f69cb11af3139ad1c908f7fedeffe7c5f9 SHA512 df7fe4662cf1c85758d8634b13b14211242115113c37f78bb7ad1196a40243a0420aca3d3548743043a9de8410db1b80192f75c492347928ae0a574ba2abc924 WHIRLPOOL 5f38b97cba750b57c3f9300c8b8a19fa20eb6e82d35e79431ec3f1b91dd16a578776d125962d94ad2d9d34e2a6142fcfe332d6322b60afc975e761bca85591cc
@@ -31,5 +33,5 @@ EBUILD gitlab-ce-9.3.11.ebuild 13706 SHA256 cbaf37ceb4aa22bca196023e3282f66f858d
 EBUILD gitlab-ce-9.4.6.ebuild 13533 SHA256 2cf84d7c1638e0083a34a18e259a4f03e3c56007cdcd0f1184e7cfa186eed47b SHA512 6f7346319677838db6e539622c1123781e9b65cad2bfc964801fc9235f6738a58e04bbd3a3b7fb088704e508b5304802bcd1f940ed535b683d78a7ffbc740701 WHIRLPOOL 829021ef040afef15b8c7d961e337817b040d13e7ab3672f8cadeabbf55e795dfa19d5ff90b2a010b5f9bf492f4491fd2dcb6c3dead4920290b1e30448270e70
 EBUILD gitlab-ce-9.5.4.ebuild 13533 SHA256 e44291160456e0e578a58e5d094bdbe338952d6e7b7f2b42a6280d2382f2b7b2 SHA512 708c4ae80b5e8a08406a32d08f0a1666e002818bdc423355c8371ec15983e601557d54be5aa7d49c3fe7ec6e39d3622299de3fb9134e512cce36840f227713f8 WHIRLPOOL c5eca7f0cb92b268c3cdd396d1f6bc4ad905d95558bf669755fe1517ccbde0499b9fa97eab686c61f743ce4fed440d46c0140bce9fda4381941517caa9177488
 EBUILD gitlab-ce-9999.ebuild 13475 SHA256 c6cd66ca400c0560780faf0e2aa1b1fc13a583408ccf55f39af840d240b3e2df SHA512 a92b5382f091c3ce6372c3205a6469e3dcb877a5dcebf2e367c012b29ea90e3b63e84d84c666bcc32d6a5f8ce35c40e6df1b7bf04d0f488413c06d9af2c5f466 WHIRLPOOL bc50cf6e5ad695c62ae69f5122cf2de860cd05b63d538bc390f0448395aa64140d01cf19ab7563cb7c7a3e1d76471297737700a37c7b31ac1333bff7c72192e2
-MISC ChangeLog 24139 SHA256 167f167e65867a261f28eb2fae514ee02c6bd1176ddf69459262a78443b9375f SHA512 3f12832a42d46bf0f6d4ecd8c24b228032c99b3614eab070d96877526d99b6bf15ba0b235c8c53fe636eec3289607ff2965ad16835f48da522dd59abb7190ee3 WHIRLPOOL 4bf5c31f89e89edce8790fbcfa83a8a2923f3809c0d0e3f5ab5b7b364199e5a4870e34e224ca765bae13b3d5f36e6c992ceefae0a84c283e3b270ac2abd398d6
+MISC ChangeLog 24303 SHA256 885f880841adc7e1fc83eb47bd559ec5b36ae6a9f695e68dff71b76c671949d6 SHA512 d86e37be1fc61af114d8b3d09e97fc03c5c8113743713949c26dbbab098d88e7310b60ea20fb6d54ba2d31d43bd3bd8c7da4d4604ead0ff8fde02cb9ade63013 WHIRLPOOL 3396f07afa2af59a84e1fae55fcbb9b670a0273836ef00f11f08cad3da783e5d843068506c019d38fe2d97a8aea2d852a90b9e840036d2ba5697711b7ed0c101
 MISC metadata.xml 801 SHA256 3dc7486a12903f47f65968d524c93500ba30a4a09fa57e5a9dacf356509b44bb SHA512 e132754b72e64246531fa883400a0cf1a473ac5a6a49623db58ccf118a038b7cf37df03d9550f37b4a25f9ddbb1dcc5652ec9a4f2259d8e3ce202692c4025f41 WHIRLPOOL e9d961681fd790008eaf80fa07ce2c55a00a58f2e920d759793783ca8c8f508602a777e94c0cb65fe87c7dbef0cabdf26e4f4082584421097d939cbab20c4ac6
