@@ -1,3 +1,8 @@
+*gitlab-ce-10.0.1 (25 Sep 2017)
+
+  25 Sep 2017; Manuel Friedli <manuel@fritteli.ch> +gitlab-ce-10.0.1.ebuild:
+  www-apps/gitlab-ce:  Add ebuild for gitlab-10.0.1.
+
 *gitlab-ce-10.0.0_rc3 (17 Sep 2017)
 
   17 Sep 2017; Manuel Friedli <manuel@fritteli.ch> +gitlab-ce-10.0.0_rc3.ebuild,
